correctly aligned text inside login box

--- a/html/css/header.css
+++ b/html/css/header.css
@@ -85,11 +85,11 @@
   left: 66.5%;
   z-index: 10;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .login_panel_header {
   color: white;
   font-family: "Quicksand";
-  
 }
